--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>js-sdk-test</title>
   <script src="jquery.min.js"></script>
   <script src="jquery.cookie.min.js"></script>
-  <script src="../src/gizwits_ws_0.3.0.min.js"></script>
+  <script src="gizwits_ws_0.3.0.min.js"></script>
   <script type="text/javascript">
     var gizwitsws;
     $(document).ready(setDefault);
