--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>js-sdk-test</title>
+  <title>js-sdk-tt</title>
   <script src="jquery.min.js"></script>
   <script src="jquery.cookie.min.js"></script>
   <script src="gizwits_ws_0.3.0.min.js"></script>
